--- a/site/style.css
+++ b/site/style.css
@@ -5,7 +5,7 @@ h2 {
 body {
   text-align: center;
   font-family: sans-serif;
-  background-color: #88948c;
+  background-color: #4dab6b;
 }
 p {
   padding-top: 2em; 
