--- a/site/style.css
+++ b/site/style.css
@@ -3,7 +3,8 @@ h2 {
   font-family: 'Noto Sans';
 }
 body {
-  text-align: center;
+  text-align: left;
+  padding-left: 200px;
   font-family: sans-serif;
   background-color: #4dab6b;
 }
