--- a/site/style.css
+++ b/site/style.css
@@ -3,8 +3,7 @@ h2 {
   font-family: 'Noto Sans';
 }
 body {
-  text-align: left;
-  padding-left: 200px;
+  text-align: center;
   font-family: sans-serif;
   background-color: #4dab6b;
 }
